--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -136,13 +136,11 @@
  HNN_Den_Xiao_Ping_hog:0 "邓小平"
  HNN_Chen_Yi_for:0 "陈毅"
  HNN_Chen_Yi_for_2:0 "陈毅"
- HNN_Zhou_En_Lai_for:0 "周恩来"
  HNN_li_wei_han_for:0 "李维汉"
  HNN_li_wei_han_for_2:0 "李维汉"
  HNN_tang_xiangming_hog:0 "汤芗铭"
  HNN_shi_ding_wu_hog:0 "石顶武"
  HNN_shi_tai_xu_hog:0 "太虚法师"
- HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
  HNN_xiao_ke_sec:0 "萧克"
  HNN_xiao_ke_sec_2:0 "萧克"
  HNN_shen_cong_wen_sec:0 "沈从文"
@@ -156,7 +154,6 @@
  HNN_huang_yong_shen_eco:0 "黄永胜"
  HNN_Chen_Yun_eco:0 "陈云"
  HNN_Chen_Yun_eco_2:0 "陈云"
- HNN_hua_luo_geng_eco:0 "华罗庚"
  HNN_shi_yin_shun_eco:0 "印顺法师"
  HNN_chen_quzhen:0 "陈渠珍"
  HNN_yuan_zuming:0 "袁祖铭"
@@ -198,6 +195,7 @@
  HNN_li_jiannong_for: "李剑农"
  HNN_li_jiannong_for_desc:0 "§Y生于：§!§L1880年6月10日；大清帝国、湖南省邵阳§!\n§Y派系：§!§c联省派§!\n§Y背景：§!§L李剑农生于一户农民家庭，长大后在当地的一所书院就读。李剑农对当地不学无术的官员极为不满。1904年，他进入湖南中路师范学堂学习，主修历史，并顺利毕业。在日本学习经济学期间，李剑农与孙中山和同盟会相识。清朝覆灭后，李剑农成为了民国的坚定拥护者。\n\n李剑农在自己的报纸上鼓吹联省自治，抨击军阀乱政。李剑农对联省自治和改良政治的研究引起了湖南省长赵恒惕的注意，赵恒惕于1922年邀请李剑农到长沙起草省宪。此后，李剑农留在湖南，帮助赵恒惕推行其政治纲领。李剑农在推动联省自治方面的工作使他成为了赵恒惕的得力助手和湖南联省派中的一位出色理论家。§!"
  HNN_huang_gonglue_sec: "黄公略"
+ HNN_huang_gonglue_sec_2: "黄公略"
  HNN_huang_gong_lue_cos: "黄公略"
  HNN_huang_gonglue_sec_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§R第八军激进派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
  HNN_huang_gonglue_sec_2_desc:0 "§Y生于：§!§L1898年1月24日；大清帝国、湖南省湘乡§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L黄公略于1916年参军入伍担任排长。他与同排战友彭德怀迅速结为挚友，他们一同在连队里秘密组织救贫会。1923年，他和彭德怀毕业于湖南陆军讲武堂，并加入了唐生智领导的国民革命军第八军第一师。\n\n如同第八军的其他成员一般，黄公略在北伐中表现优异，但这场战争最终还是以失败告终。在邓演达和宋庆龄领导的临委会参与游击之前，第八军是闽赣根据地唯一的一支游击队。黄公略和彭德怀是临委会土改计划的坚定拥护者，在贺龙的领导下，他们成为了第八军激进派的核心人物。在中国摆脱帝国主义压迫之前，只要一息尚存，黄公略决不罢休。§!"
@@ -651,6 +649,8 @@
  HNN_mao_ze_dong_add_tooltip:0 "使$HNN_mao_ze_dong_effect$"
  HNN_mao_ze_dong_helpful_tooltip:0 "§n有毛泽东作为顾问会使$HNN_mao_ze_dong_effect$§!"
  HNN_mao_ze_dong_is_helpful_tooltip:0 "§G毛泽东在我们的政府中工作会$HNN_mao_ze_dong_add_tooltip$§!"
+ HNN_zhao_zi_yang_helpful_tooltip:0 "§n有赵紫阳作为顾问会使$HNN_mao_ze_dong_effect$§!"
+ HNN_zhao_zi_yang_is_helpful_tooltip:0 "§G赵紫阳在我们的政府中工作会$HNN_mao_ze_dong_add_tooltip$§!"
  HNN_song_xilian_effect: "§Y国民党青年相关的决议§!增强"
  HNN_song_xilian_add_tooltip:0 "使$HNN_song_xilian_effect$"
  HNN_song_xilian_helpful_tooltip:0 "§n有宋希濂作为顾问会使$HNN_song_xilian_effect$§!"
@@ -1342,15 +1342,19 @@
  HNN_wang_he_shou_sec:0 "王鹤寿"
  HNN_wang_he_shou_sec_desc:0 "§Y生于：§!§L1909年4月19日；大清帝国、河北省唐县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L王鹤寿，小名“春江”，在五兄弟排行第三。1925年4月加入中国工团主义青年团，同年10月，加入中国工团党。1925年间，担任罗章龙的“交通”，住在北京奶子府，送文件时被捕第一次入狱。其后，担任全国铁路总工会石家庄分会秘书、全国铁路总工会干事。大革命后长期在天津组织工团党地下工作，多次被捕入狱，由于长时间的受刑、戴脚铐导致两腿严重变形，因无医无药导致的淋巴结核破溃导致脖子上留下疤痕。尽管在政治上，普遍认为王鹤寿属于极权派的一份子，但是同时他支持周恩来等人所提出的“又红又专”理念。§!"
  HNN_zhao_zi_yang_eco:0 "赵紫阳"
- HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封呼吁。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。§!"
+ HNN_zhao_zi_yang_eco_desc:0 "§Y生于：§!§L1919年10月17日；大清帝国、河南省滑县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L赵紫阳，原名赵修业1919年10月17日生于河南滑县桑村乡赵庄。父亲赵廷宾，字良乡，又名秋喜，家中有数十亩田地，是当地的一位地主，但平日乐善好施，得村民爱戴；他与发妻刘氏得一子，取名赵修业。1927年，赵紫阳进入位于桑村乡的县立第十七小学读书。1932年6月在桑村小学的一间简陋的教室里宣誓加入中国工青团，后由于工团党准备的夏季滑县暴动和其他起义遭镇压，地下党组织解散，赵修业与组织失去联系。1933年夏天，赵成功考取开封的省立初级中学（今开封高中），中学时期，他成绩优异，多次获得校方颁发的奖学金。上海起义爆发时，赵及其同学在开封声援上海。1936年，赵考入武昌高级中学。在武汉，他将自己的名字改为紫阳。并重新与在湖南的党组织取得联系，恢复党员身份。在工团党的革命胜利前，赵紫阳便是党内小有名气的中层干部，深受党和人民的信任。§!"
  HNN_Shang_Kun_sec:0 "杨尚昆"
  HNN_Shang_Kun_sec_desc:0 "§Y生于：§!§L1907年8月3日；大清帝国、四川省遂宁县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L杨尚昆1925年接触工团主义，随后在其胞兄烈士杨闇公的带领下走上革命道路，1926年，由青年团团员转为工团党党员；入上海大学学习，并参加了上海工人第一次、第二次武装起义的筹备工作。大革命失败后在组织的安排下重新回到四川工作，1936年四川根据地被军阀捣毁后同邓小平等人一同回到湖南。先后任宣传干事、组织机关报刊《红色中华》和《斗争》、红一军政治部主任等职务。§!"
+ HNN_Rong_Yi_Ren_eco:0 "荣毅仁"
+ HNN_Rong_Yi_Ren_eco_desc:0 "§Y生于：§!§L1916年5月1日；大清帝国、江苏省无锡县§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L1937年，荣毅仁从上海圣约翰大学历史系毕业后开始辅佐父亲经营企业，先后在无锡茂新面粉公司任助理经理，上海合丰企业公司董事，上海三新银行董事、经理。红军解放上海前上海的资本家纷纷出逃，而他毅然作出留在上海的决定，逐渐成为荣氏家族企业的代表，荣毅仁作为特别邀请人士列席全国政协第一届全体会议，并为邓小平投出他的一票。§!"
  HNN_Li_Fu_Chun_eco:0 "李富春"
  HNN_Li_Fu_Chun_eco_desc:0 "§Y生于：§!§L1900年5月22日；大清帝国、湖南省长沙市§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L1919年，年仅19岁的李富春自费前往法国勤工俭学。到法国后，做过钳工和火车司机，写下小说《一个法国兵的忏悔》。他还发表了《法国哈佛尔施乃德工厂的华工实况》的调查报告。1920年8月，和李维汉等一起将他参与发起建立的勤工俭学励进会改名为工学世界社，确定“以实行社会革命为宗旨”，参与多次政治斗争。1923年与周恩来、李维汉等人组织旅欧中国少年工团党。1926年回国参加北伐战争，任国民革命军第二军副党代表兼政治部主任、军法处处长。大革命失败后先后在广东、上海从事革命工作，上海起义失败后前往湖南中央。革命胜利后主持湖南省经济工作。§!"
  HNN_Li_Xian_Nian_eco:0 "李先念"
  HNN_Li_Xian_Nian_eco_desc:0 "§Y生于：§!§L1909年6月23日；大清帝国、湖北省黄安市§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L李先念1926年10月参加农民运动，任乡农民协会执行委员，并加入工团主义青年团。1927年发动麻黄起义，随后带来许世友等起义部队辗转多地，最终与湖南三省革命根据地会师。统一战争期间，李先念留守后方组织中央党校为党和人民培训新一代干部群体。解放后担任湖北省委书记。§!"
  HNN_rang_ming_de_sec:0 "穰明德"
  HNN_rang_ming_de_sec_desc:0 "§Y生于：§!§L1912年10月22日；大清帝国、江西省莲花县坪里乡§!\n§Y派系：§!§l技官派§!\n§Y背景：§!§L由于家境贫寒，六七岁时读了一年私塾，八岁便给地主放牛，九岁到外地当学徒，十四岁回到家乡正值北伐革命军在莲花一带活动，受其影响参加了一些革命活动。大革命失败后，在各地军阀大行白色恐怖，环境极其险恶的形势下，他于1929年勇敢地加入工团主义青年团，担任青年团基层领导工作，配合红军作战。全国解放后，他服从组织安排，转到地方工作。历任西南军政委员会交通部副部长兼公路管理局局长、党委书记。在工作中他虚心向内行学习、向群众学习、向实践学习，掌握科学技术，由一个牧童迅速成长为公路专家并著有专著。§!"
+ HNN_hua_luo_geng_eco:0 "华罗庚"
+ HNN_hua_luo_geng_eco_desc:0 "§Y生于：§!§L1910年11月12日；大清帝国、江苏省金坛县§!\n§Y派系：§!§l技官派§!\n§Y背景：§!§L华罗庚童年时就读于金坛仁劬小学。1922年，华罗庚进入金坛县立初级中学，1925年毕业。由于家中贫穷，他只好到免学费的上海中华职业学校就读，但华罗庚还是因为家中无力提供杂费和住宿费而退学。1926年，16岁的华罗庚回到金坛后，帮助父亲打理杂货铺，同时开始自学数学。1929年12月，华罗庚在《科学》杂志第14卷第14期上发表《施图姆定理之研究》。1930年12月，华罗庚在《科学》第15卷第2期上发表《苏家驹之代数的五次方程式解法不能成立之理由》。华罗庚崭露头角，被清华大学数学系主任熊庆来教授发现，邀请他来清华大学。从1931年起，华罗庚在清华大学一边学习、一边工作，仅用一年半时间就学完了数学系的全部课程，并同时自学了英、法、德、日语，在国际学术杂志上发表了三篇论文。1933年被熊庆来破格任用为助教，1934年9月被提拔为讲师。1935年，诺伯特·维纳访华，注意到了华罗庚，并向当时英国著名数学家戈弗雷·哈罗德·哈代极力推荐。1936年，华罗庚访问剑桥大学，受到了哈代-李特尔伍德学派的影响，获益匪浅，在那至少发表了15篇论文。解放后回国，在清华大学任教授。§!"
  HNN_peng_chong_eco:0 "彭冲"
  HNN_peng_chong_eco_desc:0 "§Y生于：§!§L1915年3月27日；大清帝国、福建省漳州市§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L1933年3月彭冲加入工团主义青年团。1934年8月转为工团党党员。1930年代前期，彭冲在漳州地区从事地下工作配合国民党游击队对抗孙传芳，历任漳州地区地下党团支部书记、党支部书记。1934年，受漳州工委委派，彭冲加入由左翼知识分子组织的虹桥文艺研究社，并逐渐将该组织改造为中工党领导的文艺团体芗潮剧社。革命胜利后彭冲任江苏省委副书记，分管抓生产。§!"
  HNN_Bo_Yi_Bo_eco:0 "薄一波"
@@ -1358,6 +1362,12 @@
  HNN_Bo_Yi_Bo_eco_desc:0 "§Y生于：§!§L1908年2月6日；大清帝国、山西省定襄县§!\n§Y派系：§!§m市场派§!\n§Y背景：§!§L小时候，由于家里实在太穷，怕养不活孩子，父母被迫狠下心来，溺死了薄一波刚出生的弟弟。从小遭遇的种种不公，以及目睹到强加于中国的种种屈辱和伤痛，让薄一波的思想日益激进。那时，大洋彼岸发生了工团主义革命，随后不久，孙中山也在广州发动了国民革命，薄一波因此坚定不移地信仰社会主义，他想在山西建立一个公社式的乌托邦。1925年薄一波加入中国工团党，在大革命失败后重新回到山西组织地下工作。§!"
  HNN_hu_qiao_mu_eco:0 "胡乔木"
  HNN_hu_qiao_mu_eco_desc:0 "§Y生于：§!§L1912年6月1日；大清帝国、江苏省盐城市§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L胡乔木，原名胡鼎新。1930年加入工团主义青年团，1932年转入工团党。解放后，任中国青年联合会办事处宣传部部长，同时开始使用笔名“乔木”。§!"
+ HNN_hu_qiao_mu_eco_2:0 "胡乔木"
+ HNN_hu_qiao_mu_eco_2_desc:0 "§Y生于：§!§L1912年6月1日；大清帝国、江苏省盐城市§!\n§Y派系：§!§R极权派§!\n§Y背景：§!§L胡乔木，原名胡鼎新。1930年加入工团主义青年团，1932年转入工团党。解放后，任中国青年联合会办事处宣传部部长，同时开始使用笔名“乔木”。§!"
+ HNN_Zhou_En_Lai_for:0 "周恩来"
+ HNN_Zhou_En_Lai_for_desc:0 "§Y生于：§!§L1898年3月5日；大清帝国、江苏省淮安府§!\n§Y派系：§!§l技官派§!\n§Y背景：§!§L出身于士大夫家庭的周恩来在晚清的经济衰退中尝到了贫穷的滋味。年轻时，他就读于南开大学，在那里受到陈独秀发表在《新青年》杂志上文章的影响，成了一名能言善辩的马克思主义积极分子。与邓颖超相爱（在1925年喜结良缘）后，他前往法国考察本世纪以来的伟大革命。\n\n1924年从欧洲返回后，他于新建立的黄埔军校中任教。平步青云的他很快成了政治部副主任，对新学员进行国民党三民主义教育，并严选左派入学。这让他与国民党和中国工团党缔结了广泛的联系。\n\n北伐失败后，周恩来夫妻二人参加了国民党早期起义。在那里，他开始组建被称为“红队”的情报组织。1932年在上海起义期间险些遇害后，他大胆行动，成功从中国偷渡到欧洲，受到了英雄般的待遇。作为一颗冉冉升起的新星，他被指派为流亡中的黄埔政治部主任。回家后，他立志为挽救国民革命效力。在国民党失败后，周恩来投奔湖南，再次投入革命。§!"
+ HNN_liu_hua_qing_eco:0 "刘华清"
+ HNN_liu_hua_qing_eco_desc:0 "§Y生于：§!§L1916年10月1日；大清帝国、江湖北省黄安县§!\n§Y派系：§!§a红军§!\n§Y背景：§!§L§!"
  HNN_ma_long:0 "马龙"
  HNN_ma_long_cnav:0 "马龙"
 
@@ -2086,6 +2096,9 @@
  HNN_red_navy_idea:0 "海军计划"
  HNN_autonomous_region:0 "少数民族自治区"
  HNN_peoples_commune:0 "人民公社"
+ HNN_industrial_region: "经济特区"
+ HNN_industrial_region_desc: "该特区在政策上有着一些特殊的豁免，同时由国务院直接管辖该市政务。"
+
  HNN_education_idea:0 "中国的识字率"
  HNN_education_idea_desc:0 "扫盲运动已经开始，我们成立了专门的政府委员会，并向各村县，各矿区工作派遣了专门的小组，负责处理民众中的文盲问题，扫盲工作将是一场漫长的战争，但是新政府有毅力去完成他。\n§W--------------\n政治点数：[?HNN.HNN_education_political_power_factor|=%+0]\n稳定度：[?HNN.HNN_education_stability|=%+2]\n战争支持度：[?HNN.HNN_education_war_support|=%+0]\n生活消费品：[?HNN.HNN_education_consumer_goods_factor|=%+]"
  HNN_lao_gong_idea:0 "中国劳工"
