--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1333,7 +1333,7 @@
  HNN_geng_biao_bio:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
  POLITICS_HNN_GENG_BIAO_ARMY_DESC:0 "§Y指挥官介绍\n生于：§!§g1909年8月26日，大清帝国 湖南省 醴陵县§!\n§Y军旅生涯：§!$HNN_geng_biao_bio$§g"
  HNN_Geng_Biao_for_desc:0 "§Y生于：§!§L1909年8月26日；大清帝国、湖南省醴陵县§!\n§Y背景：§!§L$HNN_geng_biao_bio$§!"
- HNN_Geng_Biao_for_2_desc:0 "§Y生于：§!§L1909年8月26日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L$HNN_geng_biao_bio$\n\n革命胜利后耿飙受组织上安排负责外交工作。$§!"
+ HNN_Geng_Biao_for_2_desc:0 "§Y生于：§!§L1909年8月26日；大清帝国、湖南省醴陵县§!\n§Y派系：§!§j正统派§!\n§Y背景：§!§L$HNN_geng_biao_bio$\n\n革命胜利后耿飙受组织上安排负责外交工作。§!"
  HNN_geng_biao_carm_desc:0 "耿飚生于醴陵县黄獭嘴镇一贫苦窑工家庭，后来全家逃荒奔赴投靠常宁水口山的亲戚，13岁时耿飚为补贴家计在矿厂当敲砂童工。同年冬，水口山矿场在工团代表蒋先云、刘东生、工人代表宋乔生（耿飙舅舅）等人的带领下发动大罢工，工团党长沙代表毛泽东与省长赵恒惕当面对质，在当地矿工的顽强斗争下，大罢工取得辉煌胜利。省政府不得不修建工人子弟学校，耿飙也因此重新开始上学。次年，赵恒惕派兵镇压水口山工人俱乐部，与工人发生交火，再次被工人赶跑。1925年，耿飙加入青年团。1926年水口山工人组织在工团党代表何叔衡的领导下组织武装部队，配合国民党北伐军。\n\n大革命失败后，水口山工人武装重新便入三区根据地，是根据地早期最精锐的力量。耿飚则以工人身份为掩护，在浏阳、平江一带组建农民赤卫队。1927年参与醴陵暴动，率赤卫队夜袭团防局，缴获十二支汉阳造，暴动失败后与组织失去联系，耿飙等人在湘东组建游击队。同年正式加入工团党。此后历任团长、师副参谋、师参谋长等职务，是红军的重要领导人。"
  HNN_Lin_Bo_Qu: "林伯渠" 
  POLITICS_HNN_LIN_Bo_Qu_DESC:0 "林伯渠生于湖南省临澧县修梅镇凉水井村，其父林鸿仪为晚清禀生。1902年考入湖南公立西路师范学堂，1904年官费留学日本早稻田大学攻读经济学。1905年加入同盟会，参加辛亥革命。1920年任孙中山大元帅府参议期间，经李大钊介绍接触工团主义思想。\n\n1926年任国民革命军第六军党代表兼政治部主任，参与北伐战争。大革命失败后秘密转入地下，利用其财政专长在上海为工团党筹措经费。1931年进入湖南三省边界根据地，主持建立苏区财政体系，首创「竹签代币」解决银元短缺问题。\n\n作为根据地「钱袋子」，他制定累进税制保障红军供给，同时通过白区关系网建立秘密贸易线，用桐油、茶叶从汉口换回药品和军火。其发明的「四联单」物资管理制度，使有限资源在逐次反围剿中发挥最大效能。这位蓄着八字胡的理财专家，用算盘为革命开辟了另一条战线。如今他临危受命担任国家主席，他会依旧以自己的方式将革命进行下去。"
@@ -1772,9 +1772,7 @@
  hungong.24.t:0 "齐白石的画展"
  hungong.24.d:0 "齐白石是一名在国内享有盛名的湖南湘潭出身的画家，他自述“作画妙在似与不似之间，太似为媚俗，不似为欺世。”，从今日起，他将在湖南省举办好几场画展，而湖南省政府将免费为公众发放门票。"
  hungong.24.a:0 "人人均可享受艺术"
- hungong.25.t:0 "湖南省中央研究院"
- hungong.25.d:0 "湖南需要一批高素质人才来规划我们的经济建设工作，同时唐生明也需要一些能做事但又不涉及权力的空闲岗位来安置党内的妥协派。于是一个混合着经济研究、政治研究领域的研究所是最好的选择，一方面这是一个相当重要的机构，用来安置妥协派毫无不妥，并没有降职外调流放一类的不进情面。而另一方面除了经济领域外，如政治研究，哲学研究一类的工作对我们现在的解放工作而言可谓是毫无价值。也许在稳定以后工团党还能讨论一些解释权相关的事宜，但是北伐都尚未完成，谈论意识形态解释权无疑会导致党内分裂，如果这些妥协派想要从这方面打倒唐生明无异会玩火自焚。"
- hungong.25.a:0 "欢迎第一任研究所所长何叔衡同志"
+
  hungong.26.t:0 "湖南的同志"
  hungong.26.d:0 "尽管程潜在湖南的大选中失败了，但是我们的工团主义同志却赢得了起义的胜利，如今他们的领袖何叔衡发来电报，希望得到[CHI.GetLeader]的支持，我们的回复是？"
  hungong.26.a:0 "当然是同意！"
@@ -2448,8 +2446,6 @@
  HNN_develop_pan_gu_shan_tungsten_mines_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y开采盘古山钨矿§!"
  HNN_develop_tie_shan_long_tungsten_mines_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y开采铁山垅钨矿§!"
  HNN_develop_xi_zang_chromium_mines_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y开采罗布萨铬矿§!"
- HNN_develop_tan_zhou_xiang_jiao_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y建设儋州橡胶园§!"
- HNN_develop_xi_shuang_ban_na_xiang_jiao_tooltip:0 "解锁决议£GFX_decision_icon_small §G§!§Y建设西双版纳橡胶园§!"
  HNN_tie_lu_category:0 "全国大开发"
  HNN_chuan_zang_tien_lu:0 "修筑川藏线"
  HNN_chang_kun_tien_lu:0 "修筑长昆线"
