整合啊整合

--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -1686,20 +1686,30 @@
 
  HNN_air_frcoe:0 "建设红色空军"
  HNN_air_frcoe_desc:0 "尽管我们一穷二白，但是空中力量的重要性我们已经在战争中见识到了。如果我们想要保护我们新生的革命果实，那么哪怕勒紧裤腰带，我们也得建设一支强大的空军部队。"
- HNN_bomber_command:0 "以轰炸机为主导"
- HNN_bomber_command_desc:0 "与其占领制空权，不如一口气将敌人炸个稀巴烂，不给他们任何反抗的计划。"
- HNN_bai_jia_zhi_chang:0 "百家之长"
- HNN_bai_jia_zhi_chang_desc:0 "不偏袒任何一方，建设一支兼容并包的强大空军。"
- HNN_fighter_command:0 "以战斗机为主导"
- HNN_fighter_command_desc:0 "没有制空权，我们拥有再多飞机也无济于事。因此组建一支庞大的战斗机群是最好不过的选择。"
- HNN_zao_bu_mai:0 "造不如买"
- HNN_zao_bu_mai_desc:0 "与其自研自造，我们不如从第三国际国家中购买一批飞机以解燃眉之急。"
- HNN_mai_bu_zao:0 "买不如造"
- HNN_mai_bu_zao_desc:0 "购买不能解决一切问题，我们不能让我们的空军力量受制于人。"
+ HNN_new_airbases: "加强空中防御"
+ HNN_new_airbases_desc: "我们无法快速的构建起一支可靠的空中力量，所以我们最好加强我们的空中防御，新建更多的防空炮、空军基地以防止长沙被敌人的空军袭击。"
  HNN_gong_ye_shi_ji_chu:0 "提升工业实力"
  HNN_gong_ye_shi_ji_chu_desc:0 "无论如何，工业是我们空军的基础，没有强大的工业基础，空军就和我们无关。"
- HNN_dui_hai_da_ji:0 "对海策略"
- HNN_dui_hai_da_ji_desc:0 "百年耻辱的教训告诉我们中国弱点所在：没有一支强大的海军，中国将任由域外海军强国宰割，正如列强曾经做过的那样。为了打击外国海军，我们鼓励发展海轰力量，研究和训练更好地瞄准，以寻求在舰队劣势局面中仍保有海战能力。"
+ HNN_wu_xian_dian_ji_hua:0 "扩建雷达站"
+ HNN_wu_xian_dian_ji_hua_desc:0 "信息是一切的关键，我们需要建设更多的雷达站，从而获取敌人的通信，同时维护我方通信。"
+ HNN_bomber_command:0 "空中死神"
+ HNN_bomber_command_desc:0 "从空中发动袭击，一口气的将敌人炸个稀巴烂，不给他们任何反抗的计划。"
+ HNN_bai_jia_zhi_chang:0 "空中支援"
+ HNN_bai_jia_zhi_chang_desc:0 "空中既是一个独立的战场，同时也并非一个独立的战场，空军将在最大程度上支援我们的陆军。"
+ HNN_fighter_command:0 "夺取制空权"
+ HNN_fighter_command_desc:0 "牢牢的将空域掌握在我们自己手中，将任何窥窃我们天空的敌人歼灭在省域之外。"
+ HNN_torpedo_bomber_project: "空中舰艇"
+ HNN_torpedo_bomber_project_desc: "百年耻辱的教训告诉我们中国弱点所在：没有一支强大的海军，中国将任由域外海军强国宰割，正如列强曾经做过的那样。为了打击外国海军，我们鼓励发展海轰力量，研究和训练更好地瞄准，以寻求在舰队劣势局面中仍保有海战能力。"
+ HNN_zao_bu_mai:0 "独自为战"
+ HNN_zao_bu_mai_desc:0 "空军不仅仅是陆军的辅助力量，更是一种前所未见的强大力量，具有跨越广阔距离、瞬间打击目标的独特能力。它能够突破传统地面作战的局限，迅速投射力量到敌方的心脏地带，实现精确打击。这种打击不仅限于军事目标，甚至可以对敌方的基础设施、指挥系统以及关键资源进行摧毁，从而极大削弱敌军的整体作战能力。"
+ HNN_mai_bu_zao:0 "飞行陆军"
+ HNN_mai_bu_zao_desc:0 "空军是陆军的延申，空军不仅是独立作战的力量，更是陆军战斗力的重要组成部分，两者相辅相成，形成协同作战的强大优势。空中力量的介入不仅使得陆军能够从不同方向发动攻击，还可以在敌后进行破坏性打击，打乱敌人的指挥和后勤体系。陆军与空军的合作能够最大化地利用空中优势，从而形成合力，增强综合战斗力。"
+ HNN_hou_qing_da_ji:0 "后勤打击"
+ HNN_hou_qing_da_ji_desc:0 "比起直接在战场上打击敌人，从空中切断敌人的后勤补给将会更加有效的杀伤敌军。"
+ HNN_jian_she_hang_kong_xue_xiao:0 "建设航空学校"
+ HNN_jian_she_hang_kong_xue_xiao_desc:0 "尽管我们尚没有那么多的空军部队，但是未雨绸缪，提前培养一批优秀的飞行员将带来极大的收益。"
+ HNN_dui_hai_da_ji:0 "航空动员"
+ HNN_dui_hai_da_ji_desc:0 "随着战争的激化，我们对空军的需求也会越来越大，我们必须做出改变，精简流水线，扩大生产量。"
 
  HNN_PROC_navy:0 "从头开始"
  HNN_PROC_navy_desc:0 "我们的海军完全是一片空白，但是大洋对岸的敌人不会给我们太多时间让我们发展一支庞大的海军，我们必须争分夺秒"
@@ -1738,7 +1748,7 @@
  hungong.5.d:0 "衡阳是赵恒惕的老家但是在湘潭这个要道被切断之后，湘赣边界的工团武装根据地纷纷发起起义暴动袭击，衡阳就此成了一座孤岛被起义军们轻易拿下。湖南形成了南北对峙的局面，如今双方将在湖南的省会长沙迎来最终对抗。"
  hungong.5.a:0 "长沙之战一触即发"
  hungong.7.t:0 "长沙战役"
- hungong.7.d:0 "没人料到，一直以来被视作在中国没有革命土壤故只能沦为国民党附庸的中国工团党竟然会在如今同现省长围绕长沙展开一场关乎湘省命运的斗争。当1927年北伐战争失败以国民党等革命者的全面落败以及军阀的胜利告终的时候，一些人绝望地怀疑革命是否再也不会成功了，尽管如此，工团党人还是坚持不懈地一次次地进行工人运动和工会组织但是又一次次地陷入毁灭，直到董必武和何叔衡等工团党员觉得再也不能这样了。于是董必武等人接受了工团党正统派对于中国当今的社会为半封建半殖民地的判断，但是拒绝仅仅只是被动期待国民党左派东山再起，而是让工团党有独当一面的能力，为此他们抛弃了松散的“正统工团主义”组织选择将布尔什维克的党组织形式和工团主义理想结合起来重塑工团党，同时在同唐生智等左翼国民党合作的过程中他们确立了工农并重的方针，提倡工团党必须走出城市主动同当今中国革命不可忽视的力量广大农民进行接触，模仿唐生智建立起来了工团党自己的湘赣闽边界革命根据地，但是这一切导致他们同陈独秀李立三的工团党中央有了不可磨灭的矛盾。但事实仿佛证明了他们是正确的，在国民党和陈李二人那所谓的工团党“正统派”于上海最后一次挣扎失败后，以宋庆龄为首的国民党中央还是来到了闽赣建设农民革命根据地。在多年来的探索中，湖南工团党遭受了无数的非议、产生了无数的动摇、面临了无数围剿、失去了无数的盟友，但这些反而让他们成为了如今这场革命的主角。但是在这最后关头，胜利却四好不容易，旧秩序的力量太过强大，革命党不断地发起攻击却不断地被击退。就这样，原本就并没有太多人力物力的闽赣湘三省边界根据地的命运在这一场拉锯战中不断的左右摇摆着......"
+ hungong.7.d:0 "没人料到，一直以来被视作在中国没有革命土壤故只能沦为国民党附庸的中国工团党竟然会在如今同现省长围绕长沙展开一场关乎湘省命运的斗争。当1927年北伐战争失败以国民党等革命者的全面落败以及军阀的胜利告终的时候，一些人绝望地怀疑革命是否再也不会成功了，尽管如此，工团党人还是坚持不懈地一次次地进行工人运动和工会组织但是又一次次地陷入毁灭，直到董必武和何叔衡等工团党员觉得再也不能这样了。于是董必武等人接受了工团党正统派对于中国当今的社会为半封建半殖民地的判断，但是拒绝仅仅只是被动期待国民党左派东山再起，而是让工团党有独当一面的能力，为此他们抛弃了松散的“正统工团主义”组织选择将布尔什维克的党组织形式和工团主义理想结合起来重塑工团党，同时在同唐生智等左翼国民党合作的过程中他们确立了工农并重的方针，提倡工团党必须走出城市主动同当今中国革命不可忽视的力量广大农民进行接触，模仿唐生智建立起来了工团党自己的湘赣闽边界革命根据地，但是这一切导致他们同陈独秀李立三的工团党中央有了不可磨灭的矛盾。但事实仿佛证明了他们是正确的，在国民党和陈李二人那所谓的工团党“正统派”于上海最后一次挣扎失败后，以宋庆龄为首的国民党中央还是来到了闽赣建设农民革命根据地。在多年来的探索中，湖南工团党遭受了无数的非议、产生了无数的动摇、面临了无数围剿、失去了无数的盟友，但这些反而让他们成为了如今这场革命的主角。但是在这最后关头，胜利却是好不容易，旧秩序的力量太过强大，革命党不断地发起攻击又不断地被击退。就这样，原本就并没有太多人力物力的闽赣湘三省边界根据地的命运在这一场拉锯战中不断的左右摇摆着......"
  hungong.7.a:0 "革命万岁！"
  hungong.7.b:0 "督理万岁！"
  hungong.15.t:0 "独裁者的末路"
@@ -2176,8 +2186,11 @@
  HNN_ge_ming_de_da_zong2:0 "革命属于大众"
  HNN_ge_ming_de_da_zong3:0 "革命属于大众"
  HNN_ge_ming_de_da_zong4:0 "革命属于大众"
- HNN_domestic_air_production2:0 "自产飞机"
- HNN_domestic_air_production2_desc:0 "湖南省已开始自产飞机用于战斗和运输。"
+ HNN_domestic_air_production:0 "自产飞机"
+ HNN_domestic_air_production_desc:0 "我们已开始自产飞机用于战斗和运输。"
+ HNN_army_of_air_idea:0 "天空陆军"
+ HNN_army_of_air_idea_desc:0 "以我们现在的工业实力而言，让空军作为陆军的补充是最好的方案。"
+ HNN_strategic_dimension_idea:0 "空中打击"
  HNN_red_navy_bu_idea:0 "总后勤部"
  HNN_ping_eng_jing_ji:0 "中德贸易"
  HNN_war_to_RUS:0 "中德对俄战争"
