--- a/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
+++ b/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
@@ -83,6 +83,8 @@
  lep_jiangsu_yiguandao_focus_tt: "§G当一贯道叛乱等级够低时，完成这一国策将解锁决议以永久移除一贯道叛乱。§!"
  lep_kmt_unrest_triggered_by_decision_tt: "§R这一负面事件由§Y镇压国民党行动§!任务超时触发。启动临时压制国民党的任务，直至你能通过完成§Y福建围剿§!国策来永久处理他们。§!\n"
  lep_yiguandao_unrest_triggered_by_decision_tt: "§R这一负面事件由§Y镇压一贯道行动§!任务超时触发。启动临时压制一贯道的任务，直至你能通过完成§Y江苏一贯道政策§!国策来永久处理他们。§!\n"
+ LEP_marshal_stands_triumphant_tt: "§L联帅赢得了华东混战！现在，是时候权衡我们的选择了...§!"
+
  LEP_Conspicuous_Kleptocracy: "不加掩饰的强盗政府"
  LEP_Conspicuous_Kleptocracy_desc: "过去的十年中，孙传芳为德国经济开发活动开放了大片华东和华南地区的土地。从武器走私到被盗古物交易，几乎所有士兵和官员都已经深陷这个由腐败交织而成的大网中。而这些行径也使八省联合臭名远扬。"
  LEP_Provincial_Armies: "省军"
@@ -1310,8 +1312,8 @@
  LEP_no_more_traitors_desc: "我们削弱乃至于驱逐联合内部腐败分子的努力取得了巨大成功，现在他们已经听任我们摆布。对他们抄家得来的大笔财富将让国家富裕起来，进一步巩固我们作为东海岸之主的地位。"
  LEP_reconcile_moderate_nationalism: "接纳温和民族主义者"
  LEP_reconcile_moderate_nationalism_desc: "我们肯定没法从大多数反租界人士处那里赢得任何爱戴，但对一些曾经敌视我们的民族主义者来说，在齐燮元坚决镇压腐败罪恶之后，他们似乎也对政府产生了热情。虽然他们仍然憎恨我们与德国合作，但如果我们继续稳固政权，建立一个符合道德的强盛中国，他们似乎愿意不把我们看作汉奸。虽然这算得上不寻常的转折，但我们不会拒绝盟友。"
- LEP_zhili_consolidation: "巩固南直系"
- LEP_zhili_consolidation_desc: "南直系内部可谓岌岌可危，面临着从共和派叛乱分子、国民党叛乱分子到上清狂热分子，乃至于我们的德国恩人的侵蚀与影响，联合的稳定程度往好了说都是一触即溃的。面对此等逆境，我们绝不能让任何人有机可乘，南直系的未来要么是光明坦途，要么就是被大炮打个稀烂。"
+ LEP_zhili_consolidation: "联帅大获全胜"
+ LEP_zhili_consolidation_desc: "追随陈督理的那些狂妄蠢货和国民党的混账亡魂以为他们可以取代八省联合！但不可否认的是，我们已把他们打回原形！随着孙传芳联帅不幸身故，齐燮元正式就任联帅，我们有责任继续“笑面虎”的未竟之业。"
  LEP_despoil_krupp: "利用克虏伯的愚行"
  LEP_despoil_krupp_desc: "在扳倒法肯豪森权威的博弈中，克虏伯步子迈得太大，整得中国的股东们不自信了。这正是将他们的资产充公的最佳时机。先进的工厂、重型器械等等，物美价廉，清仓大甩卖。"
  LEP_primacy_of_profit: "利润至上"
