--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -82,7 +82,14 @@
  CHN_No_Other_SZH_tt: "§Y没有其他势力宣称§m南直系§!领导权。§!"
 
  CSP_set_leader_tt: "§r我们将宣称工团党和国家的领导权。§!"
+ AGJ_set_leader_tt: "§a我们将宣称安国军和国家的领导权。§!"
+ RGC_set_leader_tt: "§j我们将宣称共荣圈中国军阀和国家的领导权。§!"
+ UPC_set_leader_tt: "§f我们将宣称联省派和国家的领导权。§!"
+ LKT_set_leader_tt: "§k我们将宣称国民党左派和国家的领导权。§!"
  NZH_set_leader_tt: "§z我们将宣称北直系和全国的领导权。§!"
+ MCU_set_leader_tt: "§q我们将宣称复辟派和国家的领导权。§!"
+ RKT_set_leader_tt: "§c我们将宣称国民党右派和国家的领导权。§!"
+ SZH_set_leader_tt: "§m我们将宣称南直系和全国的领导权。§!"
 
  china_is_aligned_with_northern_zhili: "由§z亲北直系§!政权统治"
  china_is_aligned_with_northern_zhili_NOT: "§R未§!由§z亲北直系§!政权统治"
@@ -95,8 +102,14 @@
 
  CHN_join_NZH_decision: "加入[NZH.GetName]"
  CHN_join_NZH_decision_desc: "自从直系在1927年取得胜利之后，他们一直主宰着中国政坛，并经受住了来自北洋内部政治风波、南方革命派和北方竞争对手的考验。尽管他们的霸权最近受到了挑战，但他们必将取得胜利，并维护中国的道德和政治秩序。"
+ CHN_join_SZH_decision: "加入[SZH.GetName]"
+ CHN_join_SZH_decision_desc: "南直系军阀是直系军阀的一个分支，他们以孙传芳及其八省联合的遗产为中心。南直系军阀与德国和使馆城市合作密切，并能为国家带来繁荣，因此我们决定加入他们。"
  CHN_join_CSP_decision: "加入[CSP.GetName]"
  CHN_join_CSP_decision_desc: "真正属于无产阶级普罗大众的革命已经到来，我们必须遵从中央的指示，共同扫除军阀反动残余与带着革命假面的国民党反动分子，革命万岁！中国社会主义万岁！中国工团党万岁！无产阶级万岁！"
+
+ china_break_free: "挑战[ROOT.Overlord.GetLeader]权威"
+ china_half_strength_of_overlord_tt: "与宗主的陆军实力之比估计不低于§Y50%§!"
+ china_has_been_365_days_tt: "向宗主屈服已超过365日。"
 
  northwest_conflict_surrender: "向敌人投降"
 
@@ -104,14 +117,14 @@
 
  associated_governorate: "合作省"
  autonomous_governorate: "自治省"
- kr_governorate: "系属省"
+ governorate: "系属省"
  integrated_governorate: "整合省"
  COUNTRY_associated_governorate: "$NONIDEOLOGY$"
  COUNTRY_associated_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_autonomous_governorate: "$NONIDEOLOGY$"
  COUNTRY_autonomous_governorate_DEF: "$NONIDEOLOGYDEF$"
- COUNTRY_kr_governorate: "$NONIDEOLOGY$"
- COUNTRY_kr_governorate_DEF: "$NONIDEOLOGYDEF$"
+ COUNTRY_governorate: "$NONIDEOLOGY$"
+ COUNTRY_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_integrated_governorate: "$NONIDEOLOGY$"
  COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
  cannot_change_autonomy_manually: "§R无法手动改变自治等级§!"
