--- a/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
+++ b/localisation/KR_League_of_Eight_Provinces_l_simp_chinese.yml
@@ -84,6 +84,12 @@
  lep_kmt_unrest_triggered_by_decision_tt: "§R这一负面事件由§Y镇压国民党行动§!任务超时触发。启动临时压制国民党的任务，直至你能通过完成§Y福建围剿§!国策来永久处理他们。§!\n"
  lep_yiguandao_unrest_triggered_by_decision_tt: "§R这一负面事件由§Y镇压一贯道行动§!任务超时触发。启动临时压制一贯道的任务，直至你能通过完成§Y江苏一贯道政策§!国策来永久处理他们。§!\n"
  LEP_marshal_stands_triumphant_tt: "§L联帅赢得了华东混战！现在，是时候权衡我们的选择了...§!"
+ LEP_fang_benren_will_be_upset: "§o方本仁会因此举而怒不可遏！§!"
+ LEP_southern_china_submission_tt: "§L将解锁一系列§Y决议§!以向华南进军！§!"
+ LEP_northern_china_submission_tt: "§L将解锁一系列§Y决议§!以向华北进军！§!"
+ LEP_war_for_the_southwest_tt: "§Y如果湖南和两广不属于直系势力圈，我们将支持诸省联合，和他们一同对这些省份宣战。§!"
+ LEP_heir_to_the_jade_marshal_tt: "§L诸省联合将进一步融入直系体制……§!"
+ LEP_deny_league_marshal_tt: "§o齐燮元联帅肯定会不高兴的……§!"
 
  LEP_Conspicuous_Kleptocracy: "不加掩饰的强盗政府"
  LEP_Conspicuous_Kleptocracy_desc: "过去的十年中，孙传芳为德国经济开发活动开放了大片华东和华南地区的土地。从武器走私到被盗古物交易，几乎所有士兵和官员都已经深陷这个由腐败交织而成的大网中。而这些行径也使八省联合臭名远扬。"
@@ -122,6 +128,12 @@
  LEP_Coercive_Rule_desc: "八省联合的崩溃教会了齐燮元一件事：对异见者必须毫不留情。齐燮元联帅会为实现自己的目标而毫不犹豫地使用被视为滥用职权的行为。从现在开始，联合将通过胁迫统治其治下公民。"
  LEP_Local_Development: "本地发展"
  LEP_Local_Development_desc: "齐燮元的政府在城市中不受欢迎，这使他转向内地和绝大多数国人居住的乡村地区。他希望通过帮助他们以及当地的地主，从而在城市反抗的情况下赢得中国农村的支持。"
+ LEP_formenting_pro_german_intellectuals: "培养亲德知识分子"
+ LEP_formenting_pro_german_intellectuals_desc: "一代奇人厉麟似在联合圈子内掌控着一个相当显赫的知识分子圈，与北京的顾维钧等人以及不少国会成员关系密切，甚至在柏林也有不少人脉。借助他的景星会，我们可以进一步讨好德国人来换取更多支持。"
+ LEP_joint_training_with_beijing_idea: "与中央军联合训练"
+ LEP_joint_training_with_beijing_idea_desc: "在我们重新回到广大的直系家族后，[LEP.GetLeader]联帅希望与吴佩孚、王承斌两位大帅的中央军共同进行联合演习。联帅希望能走出一步向现代化的进步，完成孙传芳的未竟之业，同时亦期望让那不守规矩的联军能效法中央军的纪律。"
+ LEP_open_door_policy_with_beijing: "对北京方面打开大门"
+ LEP_open_door_policy_with_beijing_desc: "北直系的领土蕴藏着巨大的利润，湖北和直隶两省的工业重镇承载着中国一些最具经济生产力的城市。而同样的，联合内部亦有江苏、安徽和浙江三个优秀的省。如果直系集团想经受住时间的考验，就必须要整合双方经济，对双方商人展开欢迎的双臂。"
  LEP_Kommission_Sponsorship: "理事会的支持"
  LEP_Kommission_Sponsorship_desc: "联合在德国所有在华伙伴中占有最特殊的位置。其允许德国企业在其疆域里拥有极大的自由以换取在工业化过程中的特别关照。这种特别关照以南京理事会以为联合募集投资、研究援助等形式出现。"
  lep_idea_extensiveconcessions: "联合从德国处取得的特殊利益不是从天上掉下来的。它的代价就是大片租界的存在，这些租界的区域涵盖了监事会控制的沿海城市，而且是合法的。联合内部的许多人都担心德国人接下来就会在政治层面上动刀了。"
@@ -645,10 +657,27 @@
  lep.205.d_ger: "根据我们在[LEP.Capital.GetName]的间谍汇报，[LEP.GetLeader]和他的军官们正在准备对[QIE.GetName]发动一场战争。据说德国的南京理事会正在计划为其运入一批军火，不过[LEP.GetLeader]与中央政府关系不合是一个众所周知的事情。\n\n不管[LEP.Capital.GetName]做出什么选择，我们都必须有所准备。"
  lep.205.d_noger: "根据我们在[LEP.Capital.GetName]的间谍汇报，[LEP.GetLeader]和他的军官们正在准备对[QIE.GetName]发动一场战争。我们虽然无法预测[QIE.GetName]是否会被[LEP.GetName]击败，但是[LEP.GetLeader]与中央政府关系不合是一个众所周知的事情。\n\n不管[LEP.Capital.GetName]做出什么选择，我们都必须有所准备。"
  lep.205.a: "又一个阻碍复国战争的麻烦"
+ lep.211.t: "收复失省"
+ lep.211.d: "长期以来，八省联合的西部诸省——湖南、广东还有广西从未归于联合治下，南京政府鞭长莫及。虽然早在1928年，联合看似已经将上述省份纳入麾下，但直至1929年联合的影响力才真正深入当地，可即便如此，诸省对联合依旧是貌合神离。第四次直奉战争后，联帅孙传芳与玉帅吴佩孚领导下的南北两大直系集团陷入对峙。整个西南地区沦为了二人攘权夺利的棋盘，各省不断利用自治与寻求庇护等手段以保护己方势力免受另一方的侵蚀。\n\n这一平衡最终在联合崩溃后被彻底打破。两广地区正式宣布脱离八省，湖南也紧随其后，联合陷入了生死存亡的斗争之中。见制于镇压东部诸省内乱，联合对于西部诸省的独立实在是无暇顾及。但他们的反叛尚且还在意料之中，毕竟自并入联合之日起他们就一直与我们若离若即。\n\n而今，我军凯旋而归，今非昔比。治下诸省重建工作稳步进行，联军展开军事操练，军官敲定作战方案，收复联合西部诸省的行动即将进行。说到底，我们有中央政府撑腰，凡事都只要我们雍容闲雅的吴佩孚与王承斌两位大帅点个头即可。"
+ lep.211.a: "北京方面没理由拒绝……"
+ lep.212.t: "南直系要扩张？"
+ lep.212.d: "今早，王承斌大帅与吴佩孚玉帅的指挥部分别收到了一则电报，其内容遣词文雅，貌似是由南京联帅亲自发给两位大帅的。吴佩孚还没来得及破译，便匆忙拨电告知王承斌自己要在洛阳召开军事会议，共商电报事宜。与往常一样略显敌意的王承斌起初还有些惊讶，但还是答应了，并打趣说自己刚打算致电吴佩孚咨询此事。\n\n会议迅速召开。吴佩孚的随行人员包括张其锽、白坚武与李炳之。在其之后，王承斌也带着萧耀南督理、高凌霨总长与蔡成勋将军进入了会议室。两位大帅像往常一样坐在会桌的对面，而这次，王承斌让吴佩孚先行发言。玉帅随即开始念读电报的内容：\n\n“敬启吴佩孚玉帅，”\n“在下联帅齐燮元，恭请中央政府正式允准，复夺因孙传芳殒命而丢失的八省联合领土。若蒙应允，联合必将在南方坚守直系荣耀，为国家统一鼎力相助。”\n“署名，联帅齐燮元。”\n\n会议室内一片沉寂，直到高凌霨开口：“这就……完啦？他是想让直系为了个荒唐梦又去打场荒唐仗吗？”与会众人也对此不知所措，不知是该说他胆大包天、愚不可及还是倔头倔脑。一般这种事都是交由内阁与陆军部审议，但不管怎样，和齐燮元这种为达目的不择手段的人混在一块儿在北京是肯定不会受待见的。\n\n尽管如此，众人依旧必须做出决定。只要两位大帅在总体方针上意见一致，他们的指令就一定能执行下去。"
+ lep.212.a: "这个浑人不好应付，给他一点甜头吧。"
+ lep.212.b: "养虎为患？然后学孙传芳在1929年反咬我们一口？"
+ lep.213.t: "联帅春风得意"
+ lep.213.d: "我们先前向北直系的不情之请被他们勉强……接受了！在王大帅和吴大帅发出的联合公告中，二人代表官方对联帅准备收复诸省联合西部失地的雄心壮志予以支持，并表示会鼎力相助。尽管他们还未完全承认诸省联合在八省全境的权威，不过他们还是会在将来的冲突中站在我们一边。\n\n按照往常，此类大事放到南京那都是要举杯相庆的，可如今在齐燮元治下，他的朋友越来越少。孙传芳的核心圈子以及各路友人要么惨遭清洗，要么就是拒绝与联帅“同流合污”，现在齐燮元所能做的只有坐在联帅府空荡荡的大厅中，精心谋划他的下一步行动。"
+ lep.213.a: "我跟他们说过的，我们会回来的……"
+ lep.214.t: "北直系的背叛"
+ lep.214.d: "没想到玉帅也会有被人当成反复无常的小人的一天。齐燮元本希望掌管津保派军事力量的王大帅会愿意与自己结盟，但他的希望落空了：吴大帅和王大帅对新任联帅发去的电报完全无动于衷，他们掌管的那个两面三刀的陆军部则对帮助自己重夺西部的建议一口回绝。\n\n他们借口国家北方局势尚不稳定，拒绝伸出援手。同时又要求南直系与北直系保持步调一致，一同帮助内阁捍卫中央政府。是可忍孰不可忍！据那些为数不多的仍留在联帅核心圈子里的人所说，联帅对北京方面的变脸怒不可遏。甚至有人建议联帅公开掀起反旗……"
+ lep.214.a: "孙大帅我都杀得，再杀一个大帅又何妨？"
+ lep.214.b: "日你妈的大帅！日你妈的内阁！日你妈！"
  lep.215.t: "方本仁来信"
  lep.215.d: "随着近来的诸多事态引发了乱局，无数投机者、阴谋家和流浪客都在阴影中四处窥视，寻求走到聚光灯下的机会。不过这些八竿子打不着的家伙多半都被拒之门外，他们的请愿书甚至都不会出现在[ROOT.GetLeader]的办公桌上。然而，其中一份诱人的提案还是得到了联帅的关注。\n\n前任江西督办方本仁是吴佩孚的死敌，也是现任江西督理邓如琢的对手，此人的生涯充满了传奇与争议。方本仁曾在江西督理蔡成勋蔡虎臣手下效力，之后又凭借自己强大的实力将蔡成勋赶出江西，代替他主政，之后方本仁带领江西加入了孙传芳的五省联军，最后又被吴佩孚解职。\n\n在被邓如琢督理代替后，方本仁被迫暂时流亡，之后他前往广东省投奔国民革命军，成为了第十一军军长。但这段生涯依然是短暂的，方本仁在北伐期间经历了钢铁，雷鸣和鲜血，尽管他确保了自己部下的安全，但却彻底解散了自己的军队。如今正在江西过着平民企业家生活的方本仁主动提出要回到我们军中服役，当然，这不是无偿的。\n\n作为提供自己娴熟的军事技能并召集兵力的代价，方本仁要求自己在混战结束后担任江西督理。自然，这个提议相当诱人，其带来的好处也是立竿见影。但若是将来方督理重返江西，江西的当权派可能会相当……不满。"
  lep.215.a: "我们当然可以合作共赢！"
  lep.215.b: "诸省联合可没有你小子的立足之地。"
+ lep.217.t: "饱受诟病的玉帅"
+ lep.217.d: "并非所有人都看玉帅顺眼，此话不假。吴佩孚为人专横跋扈、生活穷奢极侈，无论何时何地都能表现得泰然自若，胆大妄为、行事鲁莽，成天卖弄他那套“儒生军人”的歪理邪说。自然而然，他的这些品性让联省派、国民党以及近乎整个南直系都与他关系紧张。但同时，吴佩孚也是举国上下最富权势的人，没有之一。因此，我们理应回馈他的恩惠，倘若继续像孙传芳一样在南京的地盘上天高大帅远，那未必有些太蠢了。\n\n不过此举也引发了许多忠孙派与反吴派人士的极大愤慨。虽然曹锟举止和善的形象路人皆知，但吴佩孚给很多人留下的只有悲愤的回忆。就在不久之前，新近加入联合最高指挥部的方本仁将军在得知南北直系结盟之事后，愤然递交辞呈，引发了轩然大波。\n\n显然，方本仁将军仍对十年前吴佩孚逼迫他离任江西一事耿耿于怀。他手下的弟兄们也纷纷跟随方本仁退役，拒绝与这支背叛他们长官的军队合作。"
+ lep.217.a: "那就当你的平头百姓去吧！"
 
  lepcollapse.1.t: "孙传芳会见各省督理"
  lepcollapse.1.d: "孙传芳联帅于近日会见了华东五省各督理，对外宣布将讨论常规的行政管理事宜。“江西全省水稻产量低于预期。”邓如琢将军说道。“应适当减免税收，以应灾情。”\n\n鉴于广东、广西和湖南官员的缺席，以及齐燮元将军这样的纯军方人物的参会，使一些人认为这场会议其实涉及更严肃的国家安全问题。"
@@ -1091,6 +1120,28 @@
  LEP_LEP_national_populist: "八省联合"
  LEP_LEP_national_populist_ADJ: "南直系"
  LEP_LEP_national_populist_DEF: "八省联合"
+ LEP_LEP_REP_social_democrat: "八省联合"
+ LEP_LEP_REP_social_democrat_DEF: "八省联合"
+ LEP_LEP_REP_social_liberal: "八省联合"
+ LEP_LEP_REP_social_liberal_DEF: "八省联合"
+ LEP_LEP_REP_market_liberal: "八省联合"
+ LEP_LEP_REP_market_liberal_DEF: "八省联合"
+ LEP_LEP_REP_social_conservative: "八省联合"
+ LEP_LEP_REP_social_conservative_DEF: "八省联合"
+ LEP_LEP_REP_authoritarian_democrat: "八省联合"
+ LEP_LEP_REP_authoritarian_democrat_DEF: "八省联合"
+ LEP_LEP_REP_paternal_autocrat: "八省联合"
+ LEP_LEP_REP_paternal_autocrat_DEF: "八省联合"
+ LEP_LEP_REP_national_populist: "八省联合"
+ LEP_LEP_REP_national_populist_DEF: "八省联合"
+ LEP_LEP_REP_associated_governorate: "八省联合"
+ LEP_LEP_REP_associated_governorate_DEF: "八省联合"
+ LEP_LEP_REP_autonomous_governorate: "八省联合"
+ LEP_LEP_REP_autonomous_governorate_DEF: "八省联合"
+ LEP_LEP_REP_governorate: "八省联合"
+ LEP_LEP_REP_governorate_DEF: "八省联合"
+ LEP_LEP_REP_integrated_governorate: "八省联合"
+ LEP_LEP_REP_integrated_governorate_DEF: "八省联合"
  LEP_LNP_totalist: "华东联合公社"
  LEP_LNP_totalist_ADJ: "南直系"
  LEP_LNP_totalist_DEF: "华东联合公社"
@@ -1669,6 +1720,22 @@
  LEP_claim_manchuria_desc: "脱离了中国势力圈，被俄国人喜爱的疯子海军上将与狂热沙皇分子所控制，所谓的阿穆尔沿岸地区如今无疑是个悲剧。既然东方雄狮已醒，是时候除去《瑷珲条约》与《北京条约》的耻辱了。愿尼古拉·穆拉维约夫将军的遗产永被唾弃！"
  LEP_fate_of_LEC: "多极影响的终结"
  LEP_fate_of_LEC_desc: "自鸦片战争国门洞开以来，外国列强们就不知满足地攫取我们的贸易港埠，散播毒害国家、杀人吮血的毒疮。但现在在德国恩主的帮助下，军阀混战的时代终结了，那么就该收拾早就看不顺眼的诸国使馆了，我们的地盘只允许两股势力存在，我们说到做到。"
+ LEP_two_marshals_under_the_sky: "天下可容两帅"
+ LEP_two_marshals_under_the_sky_desc: "前任联帅孙传芳的处境很奇妙，表面上他是玉帅的得意门生，但却未能成为玉帅钦定的后继者。因为他与中央过于疏远而无法取信于其他北直系人士。而齐燮元不一样，他可是一只难以捉摸的变色龙。现在，玉帅与联帅将心连心，一同重建中国秩序，维护直系霸业！"
+ LEP_joint_training_with_beijing: "与北京联合训练"
+ LEP_joint_training_with_beijing_desc: "我们的许多指挥官确实可以从北方同行那里学习到许多军事知识还有专长。我们的金陵军校相比保定军校就如同萤火之比皓月。就算从个人角度来讲，我们许多的高级指挥官也没接受过正式的军事教育。通过这次联合演习，直系肯定能有所自我提升。"
+ LEP_foster_economic_cooperation: "促进经济合作"
+ LEP_foster_economic_cooperation_desc: "在联帅地盘上广泛分布且不断壮大的德国投资带来了种种好处，其中最为突出的便是让我们的经济潜力落到实处。尽管地有贫富，正如浙江和福建之间仍有天堑之隔，与北京的合作也令我们内部的经济整合愈发紧密，也许有朝一日我们将拥有自己的黄金水道。"
+ LEP_heir_to_the_jade_marshal: "玉帅接班人"
+ LEP_heir_to_the_jade_marshal_desc: "果然南直系才是玉帅大业的继承人啊！吴佩孚大帅曾经看上了孙传芳，又或者对那弱小的白坚武有些想法，但如果没有伟大的齐燮元联帅，直系很可能会亡在国民党或奉系军阀手中。玉帅本人显然已对此心知肚明，北京当然要给予我们应有的尊重。"
+ LEP_negotiate_with_the_nationalistic_elite: "与民族主义精英谈判"
+ LEP_negotiate_with_the_nationalistic_elite_desc: "民主科学座谈会由居住在上海和北京的自由派、民族主义与进步知识分子所组成，是个受人尊敬的团体。尽管他们鄙视直系对治下省份的独裁统治，与我们相看两厌。但出于谨慎考虑，我们仍有必要披上真诚意图的外衣，将这些能言善辩之人带到谈判桌上。"
+ LEP_end_southern_intransigence: "消灭南方强硬分子"
+ LEP_end_southern_intransigence_desc: "在八省联合的至暗时刻，湖南、广东和广西的督军们选择与我们断绝关系。自从这些南方人非正式地加入八省联合以来，他们一直与我们保持着一定的距离，而他们将来必定会来进犯我方领土。为了保护我们的遗产，我们必须先下手为强！"
+ LEP_utilize_the_jingxing_society: "利用青岛会"
+ LEP_utilize_the_jingxing_society_desc: "钱卓伦或许是南京幕僚中最不同寻常的知识分子之一，他本人年轻、机智又充满活力。他麾下的景星会则代表了那些对直系更为宽容的知识分子和老百姓的利益，而作为回报，他们希望政府继续深化对德关系。现在，我们被大多数人嗤之以鼻，他们的支持对我们的未来大计可谓是无价之宝。"
+ LEP_secure_german_support: "确保德国支持"
+ LEP_secure_german_support_desc: "啊，亲爱的德国盟友，真挚的德国友谊！没有德国人的支持，诸省联合就只能依赖北京内部的阴谋诡计。为了实现我们的宏伟抱负，我们需要更强大的支持。我们可以通过已经建立的联系来增加德国的援助，帮助我们重建经济和军事。作为回报，我们将确保他们在中国的影响力。"
  LEP_go_our_own_way: "玉帅愚不可及"
  LEP_go_our_own_way_desc: "北直系与我们分道扬镳后，我们曾一度一败涂地，深陷纷飞的战火硝烟中。但过去的苦难没有打垮我们，啃食我们身躯的叛徒、疯子、革命者全都灰飞烟灭，我们浴火归来，变得更加强大，现在，我们站在全中国的门户前，准备拿取属于我们的战利品。整个华夏大地都知道了吴佩孚于我们鸡肋不如，那么就让我们再表演一次，让各位观众看看离了玉帅，我们的能耐究竟如何吧。"
  LEP_our_china_now: "自南京统一"
