--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -1519,9 +1519,20 @@
  LEC_uk_stuff_category:0 "我们在远东的地位"
  LEC_uk_stuff_category_desc:0 "我们已经收回了边境地区，我们应当通过在工部局中承担责任以重申我们在远东的立场"
  LEC_ask_for_hongkong:0 "请求控制香港"
- LEC_FRANCIS_FESTING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1902年8月28日\n联合王国 都柏林\n§Y军旅生涯：§L\n1921年，费斯汀毕业于桑赫斯特皇家军事学院。他曾担任马德拉斯地区前总司令约翰·伯内特-斯图亚特的副官，在英属印度陆军或者说英国东方司令部前途无量，直到革命爆发。现在，正如大多数缺少工团主义倾向的英国军官一样，他只能在大英帝国的旧殖民地之间漂泊流浪。而逃至加拿大的帝国政府很明显没有那么多预算支撑她过去那庞大的军队，因此费斯汀不能在现存的帝国领地上继续服役，只能上海与旧时的军友们住在一起。在那儿没有人告诉你不要再穿旧时的制服，而且每天早上还有机会喝到强烈的杜松子酒。"
+
+ LEC_georg_wetzell: "格奥尔格·韦策尔"
+ LEC_walter_stennes: "瓦尔特·施坦内斯"
+ LEC_michitaro_komatsubara: "小松原道太郎"
+ LEC_koreshige_inuzuka: "犬塚惟重"
+ LEC_edward_barrett: "爱德华·巴雷特"
+ LEC_german_time: "格尔曼·蒂梅"
+ LEC_william_ewart_fairbairn: "威廉·尤尔特·费尔贝恩"
  LEC_WILLIAM_FAIRBAIRN_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1885年2月28日\n联合王国 里克斯曼沃斯\n§Y军旅生涯：§L\n曾经的皇家海军与上海红灯区警官，威廉·伊瓦尔特·费尔贝恩因他在执勤时参加无数次街头械斗而得到的伤疤和组织上海骑警的特种防暴小组而闻名。费尔班被称作“危险的丹”，这是因为他不仅精通拳击、摔跤、赛法斗、柔道与功夫，还根据这些创立了自己的格斗技巧“防卫道”。根据警方记录，他参加过五百多场持械或非持械的非训练性搏斗，并且还定制了一件设计用来阻挡7.63×25毫米毛瑟子弹的防弹衣。如今他绝大多数时间都用来激励万国商团其他成员学会近身格斗术的基本技巧。"
+ LEC_francis_wogan_festing: "弗朗西斯·沃根·费斯廷（菲士廷）"
+ LEC_FRANCIS_FESTING_ARMY_DESC:0 "§Y指挥官介绍\n§Y生于：§L\n1902年8月28日\n联合王国 都柏林\n§Y军旅生涯：§L\n1921年，费斯汀毕业于桑赫斯特皇家军事学院。他曾担任马德拉斯地区前总司令约翰·伯内特-斯图亚特的副官，在英属印度陆军或者说英国东方司令部前途无量，直到革命爆发。现在，正如大多数缺少工团主义倾向的英国军官一样，他只能在大英帝国的旧殖民地之间漂泊流浪。而逃至加拿大的帝国政府很明显没有那么多预算支撑她过去那庞大的军队，因此费斯汀不能在现存的帝国领地上继续服役，只能上海与旧时的军友们住在一起。在那儿没有人告诉你不要再穿旧时的制服，而且每天早上还有机会喝到强烈的杜松子酒。"
+ LEC_reginald_yorke_tyrwhitt: "雷金纳德·约克·蒂里特"
  LEC_REGINALD_TYRWHITT_NAVY_DESC:0 "§Y海军指挥官介绍\n§Y生于：§L\n1870年5月10日\n联合王国 牛津\n§Y海军生涯：§L\n雷吉纳·约克·蒂里特爵士最初于1883年在皇家海军不列颠尼亚号上作为军官服役，随后他不断地从同僚中脱颖而出，最终在世界大战期间担任哈里奇舰队的指挥官，即1914年打响大战第一枪的队伍。这支舰队在蒂里特指挥下最著名的一次行动就是突袭库克斯港，在这场战役中海军轰炸机发挥了关键作用，在空中打击了德国港口，并以零伤亡撤出。蒂里特履历上唯一的瑕疵就是他嘉奖了约翰·诺尔斯·伊姆·托恩船长，后者因失误导致了1925年的普利茅斯大罢工。蒂里特作为中国地区最高长官，在1926年北伐时对不列颠军队撤至澳大利亚后德国接踵而至对香港的“保护”多少负有责任，因此他对英国同胞至今也不能对他释怀。"
+
  TRIAD_POWER:0 "黑帮权力增加"
  TARIFF_INCR:0 "关税增加"
  big_ears_donation:0 "杜大耳朵的捐赠"
@@ -2218,6 +2229,16 @@
  LEC_Huang_Jinrong: "黄金荣"
  LEC_zhang_xiao_lin: "张啸林"
  LEC_wang_ya_qiao: "王亚樵"
+
+ LEC_Crime_Bosses: "诸龙头联合"
+ LEC_Brilliant_Chang: "陈南"
+ LEC_Brilliant_Chang_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1886年\n大清帝国 广东省\n§Y派系：§!§g无派系§!\n§Y军旅生涯：§!§g陈南，英语名Brilliant Chang，1913年自费留学伦敦，后在伯明翰经营一家中国餐馆，同时在暗地里从事毒品交易工作，他专门向那些年轻的女性兜售可卡因、海洛因。在导致一名女性弗雷达·肯普顿毒品过量死亡后，加上陈南中国人的身份引发了英国媒体界的舆论哗然，陈南被塑造为伦敦的“毒品大王”与“黄祸论”和“傅满洲”的具象化表现。1924年，陈南被英国审判入狱，随后被逐出英国，流亡到上海，他在这里加入了上海的青帮组织。并通过旧有的人脉负责将毒品从上海运销到不列颠公社。§!"
+ LEC_Xudatong: "徐大统"
+ LEC_Xudatong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1909年\n大清帝国 浙江省宁波镇海县\n§Y派系：§!§g桓社§!"
+ LEC_Heung_Chin: "向前"
+ LEC_Heung_Chin_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n1907年11月15日\n大清帝国 广东省惠州府陆丰县\n§Y派系：§!§g新义安§!"
+ LEC_Kot_Siu_Wong: "葛肇煌"
+ LEC_Kot_Siu_Wong_AMRY_DESC: "§Y指挥官介绍\n§Y生于：§L\n894年\n大清帝国 广东省惠州府博罗县罗阳镇水西村\n§Y派系：§!§g14K§!"
 
  POLITICS_WANG_YA_QIAO_DESC:0 "王亚樵，别名鼎，字久光，故江湖人士尊称其为九哥。在1887年2月7日生于安徽合肥磨店乡，在早年间他曾参与同盟会，在失败之后流亡上海，建立起了斧头帮，开始闯荡江湖。在上海滩内，斧头帮也一直充当着工人们的保护者，工人们向帮会缴纳会费，而当工人要罢工，要讨薪之时，王亚樵则会带领着斧头帮冲到最前线，与巡捕们大打出手，这使得他在工人中有口皆碑，而在使馆城市官僚中恶名昭彰。也因为在工人中的威望，斧头帮的情报工作是上海帮会中最出色的，他们往往掌握着最有价值的情报。在北伐战争失败后，王亚樵也由于早年间的经历他一度与国民党左派人士走得很近，而国民党右派如戴笠则曾是他的门徒。他通过上海不断的为国民党输送物资。\n\n在夺得政权之前，王亚樵就对其他帮会深感不满，他们的所作所为令人作呕。而在夺权之后，他的不满在与日俱增，尤其是对香港义安社那帮毒虫，他对这些人毫无善意可言。现在，他成功夺取了权力，他将按照自己的意愿塑造这个城市，让那些令人作呕的东西从此消失。"
 
