--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -204,3 +204,5 @@
  CHN_southern_republican_aligned: "所属：§G南方共和派§!"
  CHN_southern_zhili_aligned: "所属：§m南直系§!"
  CHN_Syndicalists_aligned: "所属：§R工团党§!"
+
+ KR_diplomatic_row: "外交纠纷"
