--- a/localisation/KR_Hunan_l_simp_chinese.yml
+++ b/localisation/KR_Hunan_l_simp_chinese.yml
@@ -4879,6 +4879,7 @@
  SHI_zhao_kong_victory:0 "释照空发动了政变"
  HNN_Shi_Zhao_Kong_la_ma:0 "第十四世达赖喇嘛"
 
+ HNN_Gu_bo_xu: "正明法师"
  POLITICS_HNN_GU_DESC:0 "顾净缘，名畴，字伯叙，法名净缘，法号正明，江苏淮安县人，亭林先生顾炎武之后裔也。他早年学儒而道而佛，遍访高师参学，修法自悟。1924年在湖南省长沙市与梁壁垣（梁漱溟先生之兄）先生等创办二学园道场，以圆融大小乘，圆融显密教，圆融世出世法为宗旨，吸收信众、戒众、行愿众、法众等四众弟子修学，弘法利生。后交好于唐生智，主办两湖佛化讲习所并于北伐军中布教。"
  POLITICS_HNN_SHI_DESC:0 "释照空，原名伊格内修斯·蒂莫西·特雷比奇-林肯。是一名匈牙利犹太人，早期在匈牙利从事表演事业。1897年前往英国伦敦，皈依基督教，并于1909年取得英国国籍。此后曾代表英国自由党当选英国下议院议员。他后来在多国投资，又曾从事间谍工作，不久后被捕，1919年被驱逐出英国，后辗转逃亡，他最终来到了中国，在包括吴佩孚在内的三个不同的军阀手下工作。据他说在一次佛陀显灵之后，他决定摒弃基督教并改信佛教。特雷比奇皈依了佛教，成为了一名僧侣。1931年，他晋升为住持，并在上海建立了自己的寺院。他规定所有信徒都必须将自己的财产交给方丈，也就是他本人。"
  HNN_Shi_tai_xu: "释太虚"
@@ -5281,6 +5282,9 @@
  hnnshenbing.8.d:0 "我们农民协会，为了我们自己的利益，要同地主豪绅作斗争。我们斗争的纲领如下：1、不还地主租稞。2、不还富人的债，取消高利借贷。3、反抗一切苛捐杂税(门牌捐、月捐、鸦片捐、屠宰税等...)，取消收税机关。4、没收地主、富农的粮食、财务、衣物，分给贫苦的农民。5、要求增加工资，改良待遇，减少工作时间。6、释放被官府捕去的农民。7、逮捕和惩办一切官吏豪绅（区长、保董)及收税人员。8、组织农民自卫队，武装自已，保护身家。9、因为农民协会是一个革命的团体，凡是反帝国主义反封建反军阀，拥护工农利益之革命的团体，我们都与联合。10、我们主张信教自由，凡是信神的，不信神的，信教的，不信教的农民，均可加入协会。"
  hnnshenbing.8.a:0 "武装起来"
 
+ CHI_xue_yue: "薛岳"
+ CHI_zhang_fakui: "张发奎"
+ CHI_li_jishen: "李济深"
  CHI_bai_wenwei: "柏文蔚"
  CHI_dai_anlan: "戴安澜"
  CHI_wang_yaowu: "王耀武"
