--- a/localisation/KR_Legation_Cities_l_simp_chinese.yml
+++ b/localisation/KR_Legation_Cities_l_simp_chinese.yml
@@ -2150,8 +2150,8 @@
  LEC_japanese_commander_desc: "此人是§N支那本部§!安保部队的一员，被借出给委任政府。如果§R反日政府§!掌权，他将离职。"
  LEC_international_commander: "万国商团军官"
  LEC_international_commander_desc: "此人是§C万国商团§!的一员，受委任政府直辖。除特殊情况外，他不会离职。"
- LEC_triad_commander: "青帮军官"
- LEC_triad_commander_desc: "此人是§G青帮§!或与之相关的帮派的一员，只忠于青帮。虽然他们缺乏作战经验，但与租界城市的地下世界的联系弥补了他们的不足。"
+ LEC_triad_commander: "黑帮军官"
+ LEC_triad_commander_desc: "此人是§G青帮§!或与之相关的帮派的一员，只忠于他们自己以及所属帮派。虽然他们缺乏作战经验，但与租界城市的地下世界的联系弥补了他们的不足。"
  LEC_police_force_desc:0 "现在，警察部门得到了额外的资金拨款，如此他们便可以招募更多的本地人加入其中，并且许多外国人也慕名来到了使馆城市，报名参加警察部队。"
  LEC_jap_kmt_help_tt:0 "§L支那本部§!会协助我们调查§R国民党§!，但不保证能成功。"
  LEC_du_kmt_help_tt:0 "§Y杜月笙§!会协助我们调查§R国民党§!，但他也希望我们能做出让步。"
